--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">Lorum</div>
+        <div class="sidebar">Dolor</div>
+        <div class="main">Amet Sit</div>
+    </div>
 </body>
 </html>
