style nav icons

--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="container">
         <div class="header">Lorum</div>
-        <div class="sidebar">Dolor</div>
+        <div class="sidebar">
+            <div class="branding"><span class="material-symbols-sharp logo" aria-hidden="true">space_dashboard</span> Dashboard</div>
+            <div class="nav">
+                <ul>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">home</span> Home</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">badge</span> Profile</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">chat_bubble</span> Messages</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">schedule</span> History</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">task</span> Tasks</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">groups</span> Communities</li>
+                </ul>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">settings</span> Settings</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">help_center</span> Support</li>
+                    <li><span class="material-symbols-sharp" aria-hidden="true">verified_user</span> Privacy</li>
+                </ul>
+            </div>
+        </div>
         <div class="main">Amet Sit</div>
     </div>
 </body>
