add header content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">Lorum</div>
+        <div class="header">
+            <div class="header-bar">
+                <form action="get">
+                    <label for="search"><span class="material-symbols-sharp" aria-label="search">search</span></label>
+                    <input type="search">
+                </form>
+                <span class="material-symbols-sharp" aria-label="notifications">notifications_active</span>
+                <img src="" alt="User avatar" class="avatar">
+                <div class="full-name">Morgan Oakley</div>
+            </div>
+            <div class="header-bar">
+                <img src="" alt="User avatar" class="avatar avatar--big">
+                <div class="welcome">Hello there,</div>
+                <div class="user">
+                    <div class="full-name">Morgan Oakley</div>
+                    <div class="username">@morgan</div>
+                </div>
+                <div class="header-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </div>
         <div class="sidebar">
             <div class="branding"><span class="material-symbols-sharp logo" aria-hidden="true">space_dashboard</span> Dashboard</div>
             <div class="nav">
