add avatar images

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 </form>
                 <div class="header-section">
                     <span class="material-symbols-outlined" aria-label="notifications">notifications_active</span>
-                    <img src="" alt="User avatar" class="avatar">
+                    <img src="images/morgan-avatar.png" alt="User avatar" class="avatar">
                     <div class="full-name">Morgan Oakley</div>
                 </div>
             </div>
             <div class="header-bar">
                     <div class="header-section">
-                        <img src="" alt="User avatar" class="avatar avatar--big">
+                        <img src="images/morgan-avatar.png" alt="User avatar" class="avatar avatar--big">
                         <div class="welcome">
                             <div>Hello there,</div>
                             <div class="user">
@@ -64,105 +64,111 @@
         <div class="main">
             <div class="projects">
                 <h1>Projects</h1>
-                <div class="project-card">
-                    <h2 class="project-title">Super Cool Project</h2>
-                    <p class="project-description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                <div class="project-cards">
+                    <div class="project-card">
+                        <h2 class="project-title">Super Cool Project</h2>
+                        <p class="project-description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card">
-                    <h2 class="project-title">Less Cool Project</h2>
-                    <p class="project-description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                    <div class="project-card">
+                        <h2 class="project-title">Less Cool Project</h2>
+                        <p class="project-description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card">
-                    <h2 class="project-title">Impossible App</h2>
-                    <p class="project-description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                    <div class="project-card">
+                        <h2 class="project-title">Impossible App</h2>
+                        <p class="project-description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card">
-                    <h2 class="project-title">Easy Peasy App</h2>
-                    <p class="project-description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                    <div class="project-card">
+                        <h2 class="project-title">Easy Peasy App</h2>
+                        <p class="project-description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card">
-                    <h2 class="project-title">Ad Blocker</h2>
-                    <p class="project-description">Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit fels. Aliquam sed malesuada eros.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                    <div class="project-card">
+                        <h2 class="project-title">Ad Blocker</h2>
+                        <p class="project-description">Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit fels. Aliquam sed malesuada eros.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
-                </div>
-                <div class="project-card">
-                    <h2 class="project-title">Money Maker</h2>
-                    <p class="project-description">Pasent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
-                    <div class="project-icons">
-                        <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                        <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                        <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                    <div class="project-card">
+                        <h2 class="project-title">Money Maker</h2>
+                        <p class="project-description">Pasent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+                        <div class="project-icons">
+                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
+                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
+                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="main-sidebar">
                 <div class="announcements">
                     <h1>Announcements</h1>
-                    <div class="announcement-item">
-                        <h2 class="announcement-title">Site Maintenance</h2>
-                        <p class="announcement-excerpt">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales cogue...</p>
-                    </div>
-                    <div class="announcement-item">
-                        <h2 class="announcement-title">Community Share Day</h2>
-                        <p class="announcement-excerpt">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
-                    </div>
-                    <div class="announcement-item">
-                        <h2 class="announcement-title">Update Privacy Policy</h2>
-                        <p class="announcement-excerpt">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+                    <div class="announcement-items">
+                        <div class="announcement-item">
+                            <h2 class="announcement-title">Site Maintenance</h2>
+                            <p class="announcement-excerpt">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales cogue...</p>
+                        </div>
+                        <div class="announcement-item">
+                            <h2 class="announcement-title">Community Share Day</h2>
+                            <p class="announcement-excerpt">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+                        </div>
+                        <div class="announcement-item">
+                            <h2 class="announcement-title">Update Privacy Policy</h2>
+                            <p class="announcement-excerpt">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+                        </div>
                     </div>
                 </div>
                 <div class="trending">
                     <h1>Trending</h1>
-                    <div class="trending-item">
-                        <img src="" alt="Peach dog silouhette on blue background" class="avatar avatar--small">
-                        <div class="trending-info">
-                            <div class="username">@tegan</div>
-                            <div class="project-title">World Peace Builder</div>
+                    <div class="trending-items">
+                        <div class="trending-item">
+                            <img src="images/tegan-avatar.png" alt="Peach dog silouhette on blue background" class="avatar avatar--small">
+                            <div class="trending-info">
+                                <div class="username">@tegan</div>
+                                <div class="project-title">World Peace Builder</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-item">
-                        <img src="" alt="Cat cartoon with ball of yarn on goldenrod background" class="avatar avatar--small">
-                        <div class="trending-info">
-                            <div class="username">@morgan</div>
-                            <div class="project-title">Super Cool Project</div>
+                        <div class="trending-item">
+                            <img src="images/morgan-avatar.png" alt="Cat cartoon with ball of yarn on goldenrod background" class="avatar avatar--small">
+                            <div class="trending-info">
+                                <div class="username">@morgan</div>
+                                <div class="project-title">Super Cool Project</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-item">
-                        <img src="" alt="Robed spiderman cartoon with headphones on grey background" class="avatar avatar--small">
-                        <div class="trending-info">
-                            <div class="username">@kendall</div>
-                            <div class="project-title">Life Changing App</div>
+                        <div class="trending-item">
+                            <img src="images/kendall-avatar.png" alt="Robed spiderman cartoon with headphones on grey background" class="avatar avatar--small">
+                            <div class="trending-info">
+                                <div class="username">@kendall</div>
+                                <div class="project-title">Life Changing App</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-item">
-                        <img src="" alt="Penguin cartoon with green hat and scarf on pink background" class="avatar avatar--small">
-                        <div class="trending-info">
-                            <div class="username">@alex</div>
-                            <div class="project-title">No Traffic Maker</div>
+                        <div class="trending-item">
+                            <img src="images/alex-avatar.png" alt="Penguin cartoon with green hat and scarf on pink background" class="avatar avatar--small">
+                            <div class="trending-info">
+                                <div class="username">@alex</div>
+                                <div class="project-title">No Traffic Maker</div>
+                            </div>
                         </div>
                     </div>
                 </div>
