style main area initial

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </form>
                 <div class="header-section">
                     <span class="material-symbols-outlined" aria-label="notifications">notifications_active</span>
-                    <img src="images/morgan-avatar.png" alt="User avatar" class="avatar">
+                    <img src="images/morgan-avatar.png" alt="User avatar" class="avatar avatar--small">
                     <div class="full-name">Morgan Oakley</div>
                 </div>
             </div>
