--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header-bar">
                 <form action="get" class="search-bar">
-                    <label for="search"><span class="material-symbols-sharp" aria-label="search">search</span></label>
+                    <label for="search"><img src="images/magnify.svg" alt="search" class="icon"></label>
                     <input type="search">
                 </form>
                 <div class="header-section">
-                    <span class="material-symbols-outlined" aria-label="notifications">notifications_active</span>
+                    <img src="images/bell-ring-outline.svg" alt="notifications" class="icon">
                     <img src="images/morgan-avatar.png" alt="User avatar" class="avatar avatar--small">
                     <div class="full-name">Morgan Oakley</div>
                 </div>
@@ -45,22 +43,22 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="branding"><span class="material-symbols-sharp logo" aria-hidden="true">space_dashboard</span> Dashboard</div>
+            <div class="branding"><img src="images/view-dashboard.svg" alt="dashboard icon" class="icon--big">Dashboard</div>
             <div class="nav">
                 <ul>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">home</span> Home</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">badge</span> Profile</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">chat_bubble</span> Messages</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">schedule</span> History</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">task</span> Tasks</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">groups</span> Communities</li>
+                    <li><img src="images/home.svg" alt="home icon" class="icon"> Home</li>
+                    <li><img src="images/card-account-details-outline.svg" alt="profile card icon" class="icon"> Profile</li>
+                    <li><img src="images/message-reply.svg" alt="messages icon" class="icon"> Messages</li>
+                    <li><img src="images/clock-time-three.svg" alt="history icon" class="icon"> History</li>
+                    <li><img src="images/note-multiple.svg" alt="tasks icon" class="icon"> Tasks</li>
+                    <li><img src="images/account-group.svg" alt="communities icon" class="icon"> Communities</li>
                 </ul>
             </div>
             <div class="nav">
                 <ul>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">settings</span> Settings</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">help_center</span> Support</li>
-                    <li><span class="material-symbols-sharp" aria-hidden="true">verified_user</span> Privacy</li>
+                    <li><img src="images/cog.svg" alt="settings icon" class="icon"> Settings</li>
+                    <li><img src="images/help-box.svg" alt="support icon" class="icon"> Support</li>
+                    <li><img src="images/shield-check.svg" alt="privacy icon" class="icon"> Privacy</li>
                 </ul>
             </div>
         </div>
@@ -72,54 +70,54 @@
                         <h2 class="project-title">Super Cool Project</h2>
                         <p class="project-description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Less Cool Project</h2>
                         <p class="project-description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Impossible App</h2>
                         <p class="project-description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Easy Peasy App</h2>
                         <p class="project-description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Ad Blocker</h2>
                         <p class="project-description">Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit fels. Aliquam sed malesuada eros.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Money Maker</h2>
                         <p class="project-description">Pasent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                         <div class="project-icons">
-                            <span class="material-symbols-outlined" aria-label="favorite">heart_plus</span>
-                            <span class="material-symbols-outlined" aria-label="track changes">track_changes</span>
-                            <span class="material-symbols-outlined" aria-label="fork">account_tree</span>
+                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
+                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
+                            <img src="images/source-fork.svg" alt="fork" class="icon">
                         </div>
                     </div>
                 </div>
