style hover effects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input type="search">
                 </form>
                 <div class="header-section">
-                    <img src="images/bell-ring-outline.svg" alt="notifications" class="icon">
+                    <div class="hoverable"><img src="images/bell-ring-outline.svg" alt="notifications" class="icon"></div>
                     <img src="images/morgan-avatar.png" alt="User avatar" class="avatar avatar--small">
                     <div class="full-name">Morgan Oakley</div>
                 </div>
@@ -70,54 +70,54 @@
                         <h2 class="project-title">Super Cool Project</h2>
                         <p class="project-description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Less Cool Project</h2>
                         <p class="project-description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Impossible App</h2>
                         <p class="project-description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Easy Peasy App</h2>
                         <p class="project-description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Ad Blocker</h2>
                         <p class="project-description">Quisque eget retrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit fels. Aliquam sed malesuada eros.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                     <div class="project-card">
                         <h2 class="project-title">Money Maker</h2>
                         <p class="project-description">Pasent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                         <div class="project-icons">
-                            <img src="images/star-plus-outline.svg" alt="favorite" class="icon">
-                            <img src="images/eye-plus-outline.svg" alt="watch" class="icon">
-                            <img src="images/source-fork.svg" alt="fork" class="icon">
+                            <div class="hoverable"><img src="images/star-plus-outline.svg" alt="favorite" class="icon"></div>
+                            <div class="hoverable"><img src="images/eye-plus-outline.svg" alt="watch" class="icon"></div>
+                            <div class="hoverable"><img src="images/source-fork.svg" alt="fork" class="icon"></div>
                         </div>
                     </div>
                 </div>
